--- a/source/AlphaCodeSource/WebContent/registration.html
+++ b/source/AlphaCodeSource/WebContent/registration.html
@@ -9,20 +9,20 @@
     <body>
        <header>
            <p>Registration Page</p>
-         <section id="formSection">
-           <form id="loginpage">
+
+           <script>
+              //TODO: add ajax code..
+           </script>
+         <section id="formSection">           
                <label for="name-input">Name:</label>
                 <input type="text" id="name-input" name="name-input" required /> </br>
                <label for="email-data">Email:</label>
                 <input type="email" id="email-data" name="email-data" required /> </br>
                <label for="password">Password:</label>
-                <input type="text" id="password" name="password" required/> </br>                   
+                <input type="password" id="password" name="password" required/> </br>                   
                <label for="tel-data">Phone Number:</label>
                 <input type="tel" id="tel-data" name="phone" required /> </br>
-               <input type="submit" value="Submit" />
-           </form>
-
-       
+               <input type="button" value="Submit" onclick="registration()"/>       
          </section>
        
        </header> 
